feat: add empresa form page with thymeleaf

--- a/src/main/resources/templates/empresa/detalhe.html
+++ b/src/main/resources/templates/empresa/detalhe.html
@@ -41,11 +41,11 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-primary my-3"
+                    <a class="btn btn-primary my-3"
                             th:href="@{/empresa/cadastro(id=${empresa.id})}"
                             type="button">
                         Alterar
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
