--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,10 +6,18 @@
 <body>
 <div th:fragment="header">
     <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><img src="assets/img/quickcup-logo.png" width="45" height="45"><span class="ms-2">QuickCup</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img th:src="@{assets/img/quickcup-logo.png}" width="45" height="45">
+                <span class="ms-2">QuickCup</span>
+            </a>
+            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5">
+                <span class="visually-hidden">Toggle navigation</span>
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Empresa</a></li>
+                    <li class="nav-item"><a class="nav-link active" th:href="@{/empresa}">Empresa</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Funcionamento</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Cadastros</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Pedidos</a></li>
