--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,8 +8,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>QuickCup - Admin</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" th:href="@{/assets/bootstrap/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/styles.min.css}">
 </head>
 <body>
 
@@ -23,7 +23,7 @@
 <div id="pagina-footer"
      th:replace="~{fragments/footer.html :: footer}"></div>
 
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script th:src="@{assets/bootstrap/js/bootstrap.min.js}"></script>
 
 </body>
 </html>
