--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -12,7 +12,7 @@
 <div class="position-absolute d-flex top-0 start-0 vw-100 vh-100">
     <div class="m-auto w-50 justify-content-center align-content-center text-center">
         <img width="50%x" alt="ATR Logo" th:src="@{/assets/img/quickcup-logo.png}">
-        <h2>Lamentamos, mas o que tentou acessar não existe, clique abaixo para voltar ao início.</h2>
+        <h2>Lamentamos, mas ocorreu um erro.</h2>
         <a th:href="@{/}" type="button" class="mt-1 btn btn-primary btn-lg">QUICKCUP</a>
 
         <div class="mt-3">
