--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 <div th:fragment="header">
-    <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-md bg-dark py-3 mb-3" data-bs-theme="dark">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img th:src="@{assets/img/quickcup-logo.png}" width="45" height="45">
+                <img th:src="@{/assets/img/quickcup-logo.png}" alt="QuickCup Logo" width="45" height="45">
                 <span class="ms-2">QuickCup</span>
             </a>
             <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5">
