--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <div th:fragment="footer">
-    <footer class="text-center text-light bg-dark py-4">
+    <footer class="text-center text-light bg-dark py-4 mt-4">
         <div class="container">
             <div class="row row-cols-1 row-cols-lg-3">
                 <div class="col">
-                    <p class="my-2">QuickCup 2024</p>
+                    <p class="my-2">QuickCup @ 2024</p>
                 </div>
                 <div class="col"></div>
                 <div class="col">
