--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -16,6 +16,9 @@
 <div id="pagina-header"
      th:replace="~{fragments/header.html :: header}"></div>
 
+<div id="pagina-mensagem"
+     th:replace="~{fragments/mensagem :: mensagem}"></div>
+
 <div id="pagina-conteudo"
      layout:fragment="content"
      class="container"></div>
