--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -20,8 +20,7 @@
      th:replace="~{fragments/mensagem :: mensagem}"></div>
 
 <div id="pagina-conteudo"
-     layout:fragment="content"
-     class="container"></div>
+     layout:fragment="content"></div>
 
 <div id="pagina-footer"
      th:replace="~{fragments/footer.html :: footer}"></div>
