--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,7 +28,7 @@
                     <li class="nav-item">
                         <a
                                 class="nav-link"
-                                th:classappend="${currentPage == 'empresa' ? 'active':''}"
+                                th:classappend="${#strings.startsWith(currentPage,'empresa') ? 'active':''}"
                                 th:href="@{/empresa}">
                             Empresa
                         </a>
@@ -36,14 +36,20 @@
                     <li class="nav-item">
                         <a
                                 class="nav-link"
-                                href="#">
+                                th:classappend="${#strings.startsWith(currentPage,'funcionamento') ? 'active':''}"
+                                th:href="@{/funcionamento}">
                             Funcionamento
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a
-                                class="nav-link"
-                                href="#">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle"
+                           th:classappend="${#strings.startsWith(currentPage, 'cadastros') ? 'active':''}"
+                           href="#"
+                           id="navbarDropdownCadastros"
+                           role="button"
+                           data-bs-toggle="dropdown"
+                           data-bs-auto-close="outside"
+                           aria-expanded="false">
                             Cadastros
                         </a>
                     </li>
