--- a/src/main/resources/templates/funcionamento/lista.html
+++ b/src/main/resources/templates/funcionamento/lista.html
@@ -14,7 +14,7 @@
                     <h1>Cadastro de Funcionamento</h1>
                     <div class="row">
                         <div class="col-md-12 col-lg-5">
-                            <h2 class="mt-3">Funcionamento por dia da semana</h2>
+                            <h2 class="mt-3">Funcionamento Semanal</h2>
                             <div class="table-responsive">
                                 <table class="table">
                                     <thead>
@@ -35,8 +35,8 @@
                             </div>
                             <a class="btn btn-primary my-3"
                                type="button"
-                               th:href="@{/funcionamento/funcionamento-semana}">
-                                Alterar funcionamento por semana
+                               th:href="@{/cadastro-semanal}">
+                                Alterar funcionamento semanal
                             </a>
                         </div>
                         <div class="col-md-12 col-lg-7">
@@ -54,13 +54,17 @@
                                     </thead>
                                     <tbody>
                                         <tr th:each="funcionamentoEspecial : ${listaFuncionamentoEspecial}">
-                                            <td th:text="${funcionamentoEspecial.tipo}"></td>
+                                            <td>
+                                                <span class="fw-semibold"
+                                                        th:classappend="${funcionamentoEspecial.tipo.name() == 'ABERTO' ? 'text-success' : 'text-danger'}"
+                                                        th:text="${funcionamentoEspecial.tipo}"></span>
+                                            </td>
                                             <td th:text="${funcionamentoEspecial.nome}"></td>
-                                            <td th:text="${funcionamentoEspecial.dataInicio}"></td>
-                                            <td th:text="${funcionamentoEspecial.dataFim}"></td>
+                                            <td th:text="${#temporals.format(funcionamentoEspecial.dataInicio, 'dd/MM/yyyy HH:mm')}"></td>
+                                            <td th:text="${#temporals.format(funcionamentoEspecial.dataFim, 'dd/MM/yyyy HH:mm')}"></td>
                                             <td>
                                                 <a class="btn btn-primary btn-sm ms-2"
-                                                   th:href="@{/funcionamento/cadastro-funcionamento(id=${funcionamentoEspecial.id})}">
+                                                   th:href="@{/funcionamento/cadastro-especial(id=${funcionamentoEspecial.id})}">
                                                     Editar
                                                 </a>
                                                 <a type="button"
@@ -69,7 +73,7 @@
                                                    data-bs-target="#modalExcluir"
                                                    data-modal-object="Funcionamento Especial"
                                                    th:data-modal-name="${funcionamentoEspecial.nome}"
-                                                   th:data-modal-link="@{/funcionamento/excluir(id=${funcionamentoEspecial.id})}"
+                                                   th:data-modal-link="@{/funcionamento/excluir-especial(id=${funcionamentoEspecial.id})}"
                                                 > Excluir</a>
                                             </td>
                                         </tr>
@@ -78,7 +82,7 @@
                             </div>
                             <a class="btn btn-primary my-3"
                                type="button"
-                               th:href="@{/funcionamento/cadastro-funcionamento}">
+                               th:href="@{/funcionamento/cadastro-especial}">
                                 Cadastrar funcionamento especial
                             </a>
                         </div>
