--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -25,7 +25,11 @@
 <div id="pagina-footer"
      th:replace="~{fragments/footer.html :: footer}"></div>
 
-<script th:src="@{assets/bootstrap/js/bootstrap.min.js}"></script>
+<div id="pagina-modal"
+     th:replace="fragments/modal :: modal"></div>
+
+<script type="text/javascript" th:src="@{assets/bootstrap/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/js/modalsandpopover.js}"></script>
 
 </body>
 </html>
