--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -26,7 +26,7 @@
      th:replace="~{fragments/footer.html :: footer}"></div>
 
 <div id="pagina-modal"
-     th:replace="fragments/modal :: modal"></div>
+     th:replace="~{fragments/modal :: modal}"></div>
 
 <script type="text/javascript" th:src="@{assets/bootstrap/js/bootstrap.min.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/modalsandpopover.js}"></script>
