--- a/src/main/resources/templates/funcionamento/form-semanal.html
+++ b/src/main/resources/templates/funcionamento/form-semanal.html
@@ -1,5 +1,5 @@
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns="http://www.w3.org/1999/html"
       layout:decorate="~{layout.html}"
       lang="pt-BR">
 
@@ -11,51 +11,55 @@
             <div class="row">
                 <div class="col">
                     <h2 class="mb-3">
-                        <span th:text="${funcionamentoEspecialRequest.id == null ? 'Cadastrar novo' : 'Editar'}"></span>
-                        horário de funcionamento especial:
+                        Editar horário de funcionamento semanal:
                     </h2>
                     <form method="post"
-                          th:object="${funcionamentoEspecialRequest}"
-                          th:action="@{/funcionamento/cadastro-especial}"
+                          th:object="${funcionamentoSemanalRequest}"
+                          th:action="@{/funcionamento/cadastro-semanal}"
                           enctype="multipart/form-data">
-                        <input class="form-control" type="hidden" th:field="*{id}">
+                        <input class="form-control" type="hidden" th:field="*{diaSemana}">
                         <div class="form-group mb-3">
-                            <label class="form-label fw-semibold" for="nome">Nome*:</label>
-                            <input id="nome" class="form-control" type="text" th:field="*{nome}" required>
-                            <div class="text-danger" th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"></div>
+                            <label class="form-label fw-semibold">
+                                Dia Semana:
+                                <span th:text="${funcionamentoSemanalRequest.diaSemana}"></span>
+                            </label>
                         </div>
-                        <div class="form-group mb-3">
-                            <label class="form-label fw-semibold" for="dataInicio">Data e hora <strong>início</strong>*:</label>
-                            <input id="dataInicio"
-                                   class="form-control"
-                                   type="datetime-local"
-                                   th:field="*{dataInicio}" required>
-                            <div class="text-danger" th:if="${#fields.hasErrors('dataInicio')}" th:errors="*{dataInicio}"></div>
+                        <div class="d-flex flex-row">
+                            <div class="form-group mb-3 col-md-12 col-lg-3">
+                                <label class="form-label fw-semibold" for="horaAbertura">Hora <strong>abertura</strong>*:</label>
+                                <input id="horaAbertura"
+                                       class="form-control"
+                                       type="time"
+                                       th:field="*{horaAbertura}" required>
+                                <div class="text-danger" th:if="${#fields.hasErrors('horaAbertura')}" th:errors="*{horaAbertura}"></div>
+                            </div>
+                            <div class="form-group mb-3 col-md-12 col-lg-3">
+                                <label class="form-label fw-semibold" for="dataFim">Hora <strong>fechamento</strong>*:</label>
+                                <input id="dataFim"
+                                       class="form-control"
+                                       type="time"
+                                       th:field="*{horaFechamento}" required>
+                                <div class="text-danger" th:if="${#fields.hasErrors('horaFechamento')}" th:errors="*{horaFechamento}"></div>
+                            </div>
                         </div>
-                        <div class="form-group mb-3">
-                            <label class="form-label fw-semibold" for="dataFim">Data e hora <strong>fim</strong>*:</label>
-                            <input id="dataFim"
-                                   class="form-control"
-                                   type="datetime-local"
-                                   th:field="*{dataFim}" required>
-                            <div class="text-danger" th:if="${#fields.hasErrors('dataFim')}" th:errors="*{dataFim}"></div>
+                        <div class="mt-3 d-flex align-items-between justify-content-between">
+                            <div>
+                                <input class="btn btn-primary"
+                                       type="submit">
+                                <a class="btn btn-secondary ml-3"
+                                   th:href="@{/funcionamento}"
+                                   type="button">
+                                    Voltar
+                                </a>
+                            </div>
+                            <div>
+                                <a class="btn btn-danger ml-3"
+                                       type="button"
+                                       th:href="@{/funcionamento/excluir-semanal(id=${funcionamentoSemanalRequest.diaSemana})}">
+                                    Excluir
+                                </a>
+                            </div>
                         </div>
-                        <div class="form-group mb-3">
-                            <label class="form-label fw-semibold" for="tipoFuncionamento">Tipo*:</label>
-                            <select id="tipoFuncionamento" class="form-select" th:field="*{tipo}">
-                                <option
-                                        th:each="tipoFuncionamento: ${listaTipoFuncionamentoEspecial}"
-                                        th:value="${tipoFuncionamento}"
-                                        th:text="${tipoFuncionamento}"></option>
-                            </select>
-                            <div class="text-danger" th:if="${#fields.hasErrors('tipo')}" th:errors="*{tipo}"></div>
-                        </div>
-                        <input class="btn btn-primary my-3" type="submit">
-                        <a class="btn btn-secondary ms-3 my-3"
-                           th:href="@{/funcionamento}"
-                           type="button">
-                            Voltar
-                        </a>
                     </form>
                 </div>
             </div>
