feat: adiciona grupo de produtos controller

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -63,7 +63,7 @@
                                     style="background-color: #4c482e;">
                                     <li><h5 class="dropdown-header">Grupo de Produtos</h5></li>
                                     <li><a class="dropdown-item" th:href="@{/grupo}">Listar</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/grupoa/cadastro}">Cadastrar</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/grupo/cadastro}">Cadastrar</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropend">
