--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -29,6 +29,7 @@
      th:replace="~{fragments/modal :: modal}"></div>
 
 <script type="text/javascript" th:src="@{assets/bootstrap/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/assets/js/jquery-3.7.1.min.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/modalsandpopover.js}"></script>
 
 </body>
