--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,22 +19,22 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link"
-                                th:classappend="${currentPage == 'index' ? 'active':''}"
-                                th:href="@{/}">
+                           th:classappend="${currentPage == 'index' ? 'active':''}"
+                           th:href="@{/}">
                             Início
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
-                                th:classappend="${#strings.startsWith(currentPage,'empresa') ? 'active':''}"
-                                th:href="@{/empresa}">
+                           th:classappend="${#strings.startsWith(currentPage,'empresa') ? 'active':''}"
+                           th:href="@{/empresa}">
                             Empresa
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
-                                th:classappend="${#strings.startsWith(currentPage,'funcionamento') ? 'active':''}"
-                                th:href="@{/funcionamento}">
+                           th:classappend="${#strings.startsWith(currentPage,'funcionamento') ? 'active':''}"
+                           th:href="@{/funcionamento}">
                             Funcionamento
                         </a>
                     </li>
@@ -51,7 +51,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark"
                             aria-labelledby="navbarDropdownCadastros" style="background-color: #283622;">
-                            <li class="nav-item dropend">
+                            <li class="nav-item dropstart">
                                 <a class="nav-link dropdown-toggle" href="#"
                                    id="navbarDropdownCadastrosGrupo"
                                    role="button"
@@ -60,13 +60,13 @@
                                 </a>
                                 <ul class="dropdown-menu"
                                     aria-labelledby="navbarDropdownCadastrosGrupo"
-                                    style="background-color: #4c482e;">
+                                    style="background-color: #283622;">
                                     <li><h5 class="dropdown-header">Grupo de Produtos</h5></li>
                                     <li><a class="dropdown-item" th:href="@{/grupo}">Listar</a></li>
                                     <li><a class="dropdown-item" th:href="@{/grupo/cadastro}">Cadastrar</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item dropend">
+                            <li class="nav-item dropstart">
                                 <a class="nav-link dropdown-toggle" href="#"
                                    id="navbarDropdownCadastrosProduto"
                                    role="button"
@@ -75,14 +75,16 @@
                                 </a>
                                 <ul class="dropdown-menu"
                                     aria-labelledby="navbarDropdownCadastrosProduto"
-                                    style="background-color: #4c482e;">
+                                    style="background-color: #283622;">
                                     <li><h5 class="dropdown-header">Produtos</h5></li>
                                     <li><a class="dropdown-item" th:href="@{/produto}">Listar</a></li>
                                     <li><a class="dropdown-item" th:href="@{/produto/cadastro}">Cadastrar</a></li>
                                 </ul>
                             </li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li class="nav-item dropend">
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li class="nav-item dropstart">
                                 <a class="nav-link dropdown-toggle" href="#"
                                    id="navbarDropdownCadastrosCliente"
                                    role="button"
@@ -91,18 +93,30 @@
                                 </a>
                                 <ul class="dropdown-menu"
                                     aria-labelledby="navbarDropdownCadastrosCliente"
-                                    style="background-color: #4c482e;">
+                                    style="background-color: #283622;">
                                     <li><h5 class="dropdown-header">Clientes</h5></li>
                                     <li><a class="dropdown-item" th:href="@{/cliente}">Listar</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link"
-                           th:href="@{/pedido}">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle"
+                           th:classappend="${#strings.startsWith(currentPage, 'pedidos') ? 'active':''}"
+                           href="#"
+                           id="navbarDropdownPedidos"
+                           role="button"
+                           data-bs-toggle="dropdown"
+                           data-bs-auto-close="outside"
+                           aria-expanded="false">
                             Pedidos
                         </a>
+                        <ul class="dropdown-menu"
+                            aria-labelledby="navbarDropdownPedidos"
+                            style="background-color: #283622;">
+                            <li><a class="dropdown-item" th:href="@{/atendimento}">Atendimento</a></li>
+                            <li><a class="dropdown-item" th:href="@{/pedido}">Listar</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
