feat: update header and footer

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -15,8 +15,20 @@
                 <div class="col"></div>
                 <div class="col">
                     <ul class="list-inline my-2">
-                        <li class="list-inline-item"></li>
-                        <li class="list-inline-item"><a class="link-secondary" href="#">GitHub</a></li>
+                        <li class="list-inline-item">
+                            <a class="link-secondary"
+                               target="_blank"
+                               href="https://zancanela.dev.br/">
+                                zancanela.dev
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="link-secondary"
+                               target="_blank"
+                               href="https://github.com/didifive/quickcup-api">
+                                Repo GitHub
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
