feat: add atendimento screen

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -114,7 +114,7 @@
                         <ul class="dropdown-menu"
                             aria-labelledby="navbarDropdownPedidos"
                             style="background-color: #283622;">
-                            <li><a class="dropdown-item" th:href="@{/atendimento}">Atendimento</a></li>
+                            <li><a class="dropdown-item" th:href="@{/pedido/atendimento}">Atendimento</a></li>
                         </ul>
                     </li>
                 </ul>
