--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -18,5 +18,22 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="modalCancelar" tabindex="-1" aria-labelledby="modalCancelarLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalCancelarLabel">Titulo</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Conteúdo Dinâmico
+                </div>
+                <div class="modal-footer">
+                    <a type="button" class="btn btn-primary" data-bs-dismiss="modal">Fechar</a>
+                    <a type="button" class="btn btn-danger" href="#">Confirmar Cancelamento</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </html>
